# tokenizers-wasm

./: Cargo.toml  LICENSE_MIT  README.md
example/: README.md  bootstrap.js  index.html  index.js  package-lock.json  package.json  setup.sh
src/: lib.rs
tokenizers-js/: README.md  index.js  package-lock.json  package.json
tokenizers-js/.bin/: create-wasm-app.js
